# bsn2

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
adaptation/: .coverage  package.xml  setup.cfg  setup.py
bsn_interfaces/: CMakeLists.txt  package.xml
central_hub/: .coverage  coverage.xml  package.xml  pytest.ini  setup.cfg  setup.py
docs/: mkdocs.yml
features/: BSN-P03.feature  check_bsn.feature  check_node_conn.feature  data_persistance.feature  environment.py  health_status.feature
patient/: .coverage  coverage.xml  package.xml  pytest.ini  setup.cfg  setup.py
sensor/: .coverage  coverage.xml  package.xml  pytest.ini  setup.py
sensor/config/: abpd.yaml  abps.yaml  diagnostics_config.yaml  ecg.yaml  glucosemeter.yaml  oximeter.yaml  thermometer.yaml
sensor/launch/: sensor_testing_launch.py
sensor/sensor/: abpd.py  abps.py  ecg.py  glucose.py  oximeter.py  risk_evaluator.py  sensor.py  sensor_executor.py  thermometer.py
sensor/sensor/components/: battery_manager.py  config_manager.py  data_processor.py  lifecycle_manager.py  publishers.py  risk_manager.py
sensor/sensor/utils/: risk_evaluator.py
sensor/test/: pytest.ini  test_adaptation_handler.py  test_lifecycle_manager.py  test_sensor_charac.py  test_sensor_lifecycle.py
sensor/test/bdd/: conftest.py
sensor/test/bdd/features/: sensor.feature
sensor/test/bdd/step_defs/: test_sensor_steps.py
shared_components/: .coverage  coverage.xml  package.xml  pytest.ini  setup.cfg  setup.py
shared_components/shared_components/: adaptation_handler.py  battery.py  lifecycle_manager.py
shared_components/test/: test_adaptation_handler.py  test_battery.py  test_lifecycle_manager.py
(+125 files in other folders)
