<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ricardo.caldas@chalmers.se">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>bsn_interfaces</depend>
  <depend>system_monitor</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-coverage</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
